[feat] 필드명 통일 및 RestDocs 설명 추가 (#174)
* [fix] : api 문서 수정, 혼잡도 closed 추가

* [add] cors 도메인 추가

* [feat] 필드명 통일 및 RestDocs 설명 추가

* [feat] 참여 가이드 dto 필드명 수정 및 RestDocs, StampTourAdminControllerTest 수정

* [feat] 랜딩/메인 페이지 디자인 템플릿 필드명 변경

* [feat] 스탬프 미션 관련 필드 수정 및 RestDocs 수정

* [feat] 엔티티 boolean 필드 -> Boolean으로 수정

---------

Co-authored-by: Hee Chan <88177732+HeeChanN@users.noreply.github.com>
Co-authored-by: Hee Chan <ahc70032@gmail.com>