@@ -1,7 +1,6 @@
 package com.halo.eventer.domain.stamp.dto.mission.response;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.halo.eventer.domain.stamp.Mission;
 import lombok.AllArgsConstructor;
@@ -14,12 +13,15 @@ import lombok.NoArgsConstructor;
 public class MissionBriefResDto {
     private Long missionId;
     private String title;
+    private Boolean showMission;
+    private Boolean showMissionTitle;
 
     public static List<MissionBriefResDto> fromEntities(List<Mission> missions) {
-        return missions.stream().map(MissionBriefResDto::from).collect(Collectors.toList());
+        if (missions == null || missions.isEmpty()) return List.of();
+        return missions.stream().map(MissionBriefResDto::from).toList();
     }
 
     public static MissionBriefResDto from(Mission mission) {
-        return new MissionBriefResDto(mission.getId(), mission.getTitle());
+        return new MissionBriefResDto(mission.getId(), mission.getTitle(), mission.getShow(), mission.getShowTitle());
     }
 }
